@@ -1,3 +1,9 @@
+2020-01-23  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/92804
+	* g++.dg/concepts/pr92804-1.C: New.
+	* g++.dg/concepts/pr92804-2.C: Likewise.
+
 2020-01-23  David Malcolm  <dmalcolm@redhat.com>
 
 	PR analyzer/93375
